# Ojas

./: README.md  build.gradle.kts  index.html  settings.gradle.kts  unnamed.patch
app/: build.gradle.kts
app/src/androidTest/java/com/pranshu/ojas/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  kiss_fft.c  kiss_fft.h  native-lib.cpp  signal_processor.cpp  signal_processor.h
app/src/main/java/com/pranshu/ojas/: MainActivity.kt
app/src/main/java/com/pranshu/ojas/analysis/: HRVAnalyzer.kt  SignalQualityIndicator.kt
app/src/main/java/com/pranshu/ojas/camera/: CameraManager.kt
app/src/main/java/com/pranshu/ojas/core/: NativeSignalProcessor.kt
app/src/main/java/com/pranshu/ojas/data/: MeasurementHistory.kt
app/src/main/java/com/pranshu/ojas/ml/: PulseML.kt
app/src/main/java/com/pranshu/ojas/ui/: MainScreen.kt
app/src/main/java/com/pranshu/ojas/ui/theme/: Theme.kt
app/src/main/java/com/pranshu/ojas/viewmodel/: HeartRateViewModel.kt
app/src/main/java/com/pranshu/ojas/vision/: FaceTracker.kt
app/src/main/ml/: rppg_model.tflite
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pranshu/ojas/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
